# crewai-testing-agent

./: .env.example  .gitignore  PLAYWRIGHT_TOOLS.md  README.md  TEST_PLAN.md  TEST_PLAN_COMPLETE.md  ci_test.py  example_usage.py  pyproject.toml  requirements.txt  simple_test.py
.claude/: settings.local.json
src/frontend_test_crew/: __init__.py  crew.py  mcp_config.py
src/frontend_test_crew/agents/: __init__.py  test_agents.py
src/frontend_test_crew/tasks/: __init__.py  test_tasks.py
src/frontend_test_crew/tools/: __init__.py  playwright_tools.py
